--- a/css/styles.css
+++ b/css/styles.css
@@ -56,8 +56,7 @@ ul {
 /* Header */
 
 .header {
-  
-  border-bottom: 1px solid #ECECEC;
+  border-bottom: 1px solid #ececec;
 }
 
 .header-container {
@@ -103,7 +102,6 @@ ul {
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
- 
 }
 
 .nav-item {
@@ -130,18 +128,14 @@ ul {
   color: var(--main-brand-color);
 }
 
-
 .email {
   display: flex;
   align-items: center;
   gap: 10px;
-  
 }
 
 .icon-nav {
-  
-  fill: currentColor; 
-
+  fill: currentColor;
 }
 
 .contacts .email {
@@ -164,26 +158,19 @@ ul {
 
 /* Hero */
 .hero {
-  
-  
   padding-top: 200px;
   padding-bottom: 200px;
   text-align: center;
   max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
-  background-image: linear-gradient(
-    to right,
-    rgba(47, 48, 58, 0.4)
-    );
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4));
   background-image: url(/img/background-img.jpg);
   background-color: var(--hero-footer);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 1600px;
-  
-} 
-
+}
 
 .hero-container {
   margin-left: auto;
@@ -225,7 +212,7 @@ ul {
 .button:hover,
 .button:focus {
   color: var(--primary-white-color);
-  background-color: #188CE8;
+  background-color: #188ce8;
 }
 
 /* sections */
@@ -240,14 +227,13 @@ ul {
   display: flex;
   gap: 30px;
   flex-wrap: wrap;
-  
 }
 
 .adv-icon {
   display: block;
   width: 270px;
   height: 120px;
-  background-color: #F5F4FA;
+  background-color: #f5f4fa;
   border-radius: 4px;
   text-align: center;
   padding: 25px 100px;
@@ -255,10 +241,8 @@ ul {
 }
 
 .adv-item {
-  flex-basis: calc((100% - 30px*3)/4);
+  flex-basis: calc((100% - 30px * 3) / 4);
 }
-
-
 
 .section-title {
   color: var(--default-text-color);
@@ -334,7 +318,7 @@ ul {
 /*TEAM*/
 
 .team-section {
-  background-color: #F5F4FA;
+  background-color: #f5f4fa;
 }
 
 .team {
@@ -344,21 +328,21 @@ ul {
 }
 
 .team-member {
-  flex-basis: calc((100% - 30px*3)/4);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  flex-basis: calc((100% - 30px * 3) / 4);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .team :nth-child(4n) {
   margin-right: 0;
 }
 
-
 .team-content {
   background-color: var(--primary-white-color);
   padding-top: 30px;
   padding-bottom: 30px;
   text-align: center;
-  border: 1px solid #EEEEEE;
+  border: 1px solid #eeeeee;
   border-top: none;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
@@ -367,7 +351,7 @@ ul {
 .social {
   display: flex;
   align-items: center;
-  
+
   justify-content: center;
   gap: 10px;
   margin-top: 16px;
@@ -379,13 +363,11 @@ ul {
   width: 44px;
   height: 44px;
   border-radius: 50%;
-  color: #AFB1B8;
-  
+  color: #afb1b8;
 }
 
 .social-link:hover,
-.social-link:focus
- {
+.social-link:focus {
   color: var(--primary-white-color);
   background-color: var(--main-brand-color);
 }
@@ -400,7 +382,6 @@ ul {
   display: flex;
   gap: 30px;
   justify-content: center;
-  
 }
 
 .client-link {
@@ -409,32 +390,24 @@ ul {
   height: 92px;
   align-items: center;
   justify-content: center;
-  border: 1px solid #AFB1B8;
+  border: 1px solid #afb1b8;
   border-radius: 4px;
-  color: #AFB1B8;
-  
-
+  color: #afb1b8;
 }
 
 .client-link:hover,
 .client-link:focus {
   border-color: var(--main-brand-color);
-  
 }
 
 .client-icon {
- fill: currentColor;
+  fill: currentColor;
 }
 
 .client-link:hover .client-icon,
-.client-link:focus .client-icon
- {
+.client-link:focus .client-icon {
   fill: var(--main-brand-color);
 }
-
-
-
-
 
 /* Portfolio page*/
 
@@ -466,7 +439,8 @@ ul {
 .menu-btn:focus {
   background-color: var(--main-brand-color);
   color: var(--primary-white-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .projects {
@@ -475,22 +449,19 @@ ul {
   gap: 30px;
 }
 
-
-
 .project-card {
-  flex-basis: calc((100% - 30px*2)/3);
+  flex-basis: calc((100% - 30px * 2) / 3);
 }
 
-.project-card:hover
-.project-card:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-
-
+.project-card:hover,
+ .project-card:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .project-descr {
   padding: 20px 24px;
-  border: 1px solid #EEEEEE;
+  border: 1px solid #eeeeee;
   border-top: none;
 }
 
@@ -516,15 +487,12 @@ ul {
   line-height: 2;
 }
 
-
-
 /* Footer */
 
 .footer {
   background-color: var(--hero-footer);
   padding-top: 60px;
   padding-bottom: 60px;
-
 }
 
 .logo-footer {
@@ -532,7 +500,6 @@ ul {
   margin-bottom: 20px;
   padding-top: 0;
   padding-bottom: 0;
-  
 }
 
 .white {
@@ -544,7 +511,6 @@ ul {
   font-style: normal;
   font-weight: 400;
   line-height: 1.7;
-  
 }
 
 .address-title {
@@ -553,7 +519,6 @@ ul {
 }
 
 .address .address-title {
-  
   color: #ffffff;
   text-decoration: none;
   display: block;
@@ -575,9 +540,7 @@ ul {
 }
 
 .address-item {
-  
   margin-bottom: 9px;
-
 }
 
 .address-item:last-child {
@@ -590,12 +553,11 @@ ul {
   gap: 70px;
 }
 
-
 .join-text {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-weight: 700;
   font-size: 14px;
-  line-height: calc(16/14);
+  line-height: calc(16 / 14);
   text-transform: uppercase;
   color: var(--primary-white-color);
   margin-bottom: 20px;
@@ -614,8 +576,7 @@ ul {
   height: 44px;
   border-radius: 50%;
   color: var(--primary-white-color);
-  background-color: rgba(255, 255, 255, 0.1);;
-
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .join-link:hover,
