--- a/css/styles.css
+++ b/css/styles.css
@@ -164,8 +164,7 @@ ul {
   max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4));
-  background-image: url(/img/background-img.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/background-img.jpg);
   background-color: var(--hero-footer);
   background-repeat: no-repeat;
   background-position: center;
@@ -331,6 +330,7 @@ ul {
   flex-basis: calc((100% - 30px * 3) / 4);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
 }
 
 .team :nth-child(4n) {
